--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1,4 +1,4 @@
-/* normalize.css v2.1.2 | MIT License | git.io/normalize */
+/*! normalize.css v2.1.2 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -248,7 +248,7 @@ figure {
  */
 /* line 253, ../scss/base/_normalize.scss */
 fieldset {
-  border: 1px solid silver;
+  border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
@@ -444,7 +444,7 @@ h2 {
 h3 {
   font-size: 21px;
   line-height: 1.14285714285714;
-  padding: 0.76em 0 0.39em;
+  padding: 0.76em 0 .39em;
 }
 @media screen and (max-width: 900px) {
   /* line 20, ../scss/base/_typography.scss */
@@ -1061,6 +1061,7 @@ header {
   /* line 25, ../scss/application.scss */
   header {
     background-size: 100% auto;
+    margin-bottom: 12px;
   }
 }
 /* line 35, ../scss/application.scss */
@@ -1084,31 +1085,32 @@ header h1 a {
 @media screen and (max-width: 900px) {
   /* line 42, ../scss/application.scss */
   header h1 a {
-    font-size: 80px;
+    font-size: 76px;
   }
 }
 @media screen and (max-width: 800px) {
   /* line 42, ../scss/application.scss */
   header h1 a {
-    font-size: 70px;
+    font-size: 68px;
   }
 }
 @media screen and (max-width: 700px) {
   /* line 42, ../scss/application.scss */
   header h1 a {
-    font-size: 60px;
+    font-size: 54px;
+    font-weight: normal;
   }
 }
 @media screen and (max-width: 600px) {
   /* line 42, ../scss/application.scss */
   header h1 a {
-    font-size: 50px;
+    font-size: 47px;
   }
 }
 @media screen and (max-width: 500px) {
   /* line 42, ../scss/application.scss */
   header h1 a {
-    font-size: 40px;
+    font-size: 34px;
   }
 }
 /* line 57, ../scss/application.scss */
@@ -1168,74 +1170,65 @@ header h1 a:before {
 @media screen and (max-width: 600px) {
   /* line 59, ../scss/application.scss */
   header h1 a:before {
-    background-image: url('../images/sprites-s81af367ff4.png');
-    background-position: -20px -150px;
-    background-repeat: no-repeat;
-    display: block;
-    height: 65px;
-    width: 64px;
+    background: url("../images/sprites-2x/logo-small.png") no-repeat left top;
+    height: 48px;
+    width: 48px;
+    -webkit-background-size: 48px auto;
+    -moz-background-size: 48px auto;
+    -o-background-size: 48px auto;
+    background-size: 48px auto;
     margin-bottom: 8px;
+    display: block;
   }
 }
-@media screen and (max-width: 600px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 600px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (max-width: 600px) and (min-device-pixel-ratio: 2) {
-  /* line 59, ../scss/application.scss */
-  header h1 a:before {
-    background-position: 0 -150px;
-    -webkit-background-size: 444px auto;
-    -moz-background-size: 444px auto;
-    -o-background-size: 444px auto;
-    background-size: 444px auto;
-    background-image: url('../images/sprites-2x-s49afbe8350.png');
-  }
-}
-/* line 68, ../scss/application.scss */
+/* line 75, ../scss/application.scss */
 header h2 {
   color: rgba(0, 0, 0, 0.6);
   font-weight: 500;
-  margin: 8px 0 20px 0;
-  font-size: 30px;
 }
-@media screen and (max-width: 900px) {
-  /* line 68, ../scss/application.scss */
-  header h2 {
-    font-size: 24px;
-  }
-}
-/* line 76, ../scss/application.scss */
-header h2 a {
-  color: #555;
-}
-/* line 79, ../scss/application.scss */
-header h2 a:before, header h2 a:after {
-  content: "\2022";
+/* line 80, ../scss/application.scss */
+header h2 .div {
   display: inline-block;
-  padding: 0 10px;
+  margin: 0 10px;
 }
 @media screen and (max-width: 700px) {
-  /* line 76, ../scss/application.scss */
+  /* line 80, ../scss/application.scss */
+  header h2 .div {
+    display: none;
+  }
+}
+/* line 87, ../scss/application.scss */
+header h2 a {
+  /*&:before {
+    content: "\2022";
+    display: inline-block;
+    padding: 0 10px;
+  }*/
+}
+@media screen and (max-width: 700px) {
+  /* line 87, ../scss/application.scss */
   header h2 a {
     display: block;
   }
-  /* line 87, ../scss/application.scss */
+  /* line 97, ../scss/application.scss */
   header h2 a:before, header h2 a:after {
     display: none;
   }
 }
-/* line 94, ../scss/application.scss */
+/* line 104, ../scss/application.scss */
 header h3.twitter a {
-  font-size: 1.14285em;
   text-decoration: none;
-  font-weight: 300;
+  font-weight: 500;
 }
 
-/* line 103, ../scss/application.scss */
+/* line 113, ../scss/application.scss */
 .home p {
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
 }
 
-/* line 108, ../scss/application.scss */
+/* line 118, ../scss/application.scss */
 p.large {
   color: rgba(0, 0, 0, 0.6);
   max-width: 640px;
@@ -1246,13 +1239,13 @@ p.large {
   text-align: center;
 }
 @media screen and (max-width: 700px) {
-  /* line 108, ../scss/application.scss */
+  /* line 118, ../scss/application.scss */
   p.large {
     font-size: 18px;
     font-weight: 400;
   }
 }
-/* line 118, ../scss/application.scss */
+/* line 128, ../scss/application.scss */
 p.large + p {
   text-align: center;
   max-width: 552px;
@@ -1260,13 +1253,13 @@ p.large + p {
   padding-bottom: .8em;
 }
 
-/* line 126, ../scss/application.scss */
+/* line 136, ../scss/application.scss */
 .button {
   display: inline-block;
   font-weight: 300;
-  font-size: 30px;
+  font-size: 26px;
   line-height: 32px;
-  padding: 4px 20px;
+  padding: 4px 20px 6px;
   border: solid 2px #2da4cc;
   background: #2da4cc;
   color: white;
@@ -1277,54 +1270,61 @@ p.large + p {
   border-radius: 4px;
   text-decoration: none;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 24px;
 }
-/* line 140, ../scss/application.scss */
+/* line 150, ../scss/application.scss */
 .button:hover {
   background: #a00;
   border-color: #a00;
   color: white;
 }
-/* line 142, ../scss/application.scss */
+/* line 152, ../scss/application.scss */
 .button.sponsor {
-  margin-top: 20px;
   font-size: 24px;
   font-weight: 400;
   background: transparent;
   color: #2da4cc;
 }
-/* line 148, ../scss/application.scss */
+/* line 158, ../scss/application.scss */
 .button.sponsor:hover {
   color: #a00;
   border-color: #a00;
   background: transparent;
 }
 @media screen and (max-width: 700px) {
-  /* line 126, ../scss/application.scss */
+  /* line 136, ../scss/application.scss */
   .button {
-    font-size: 26px;
+    font-size: 18px;
     font-weight: 400;
     display: block;
+    margin-bottom: 12px;
     margin-left: auto;
     margin-right: auto;
     max-width: 260px;
     margin-top: 2%;
   }
-  /* line 160, ../scss/application.scss */
+  /* line 171, ../scss/application.scss */
   .button.sponsor {
     font-size: 18px;
   }
 }
 
-/* line 164, ../scss/application.scss */
+/* line 175, ../scss/application.scss */
 .image-gallery {
   overflow: hidden;
   position: relative;
-  margin-top: 100px;
+  margin-top: 4.5em;
   height: 0;
   padding-top: 45%;
 }
-/* line 171, ../scss/application.scss */
+@media screen and (max-width: 700px) {
+  /* line 175, ../scss/application.scss */
+  .image-gallery {
+    margin-top: 1.5em;
+    padding-top: 60%;
+  }
+}
+/* line 187, ../scss/application.scss */
 .image-gallery:before {
   content: "";
   display: block;
@@ -1337,7 +1337,7 @@ p.large + p {
   background: transparent url("../images/sand-shadow.png") no-repeat top center;
   background-size: 100% auto;
 }
-/* line 184, ../scss/application.scss */
+/* line 200, ../scss/application.scss */
 .image-gallery figure {
   display: block;
   position: absolute;
@@ -1346,14 +1346,14 @@ p.large + p {
   bottom: 0;
   left: 0;
 }
-/* line 190, ../scss/application.scss */
+/* line 206, ../scss/application.scss */
 .image-gallery img {
   display: block;
   position: absolute;
   top: 0;
   width: 100%;
 }
-/* line 197, ../scss/application.scss */
+/* line 213, ../scss/application.scss */
 .image-gallery figcaption {
   display: block;
   position: absolute;
@@ -1361,49 +1361,53 @@ p.large + p {
   bottom: 20%;
   padding: 10px 20px;
   background: rgba(45, 164, 204, 0.9);
+  font-size: 18px;
+  line-height: 24px;
   -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
-/* line 205, ../scss/application.scss */
+/* line 223, ../scss/application.scss */
 .image-gallery figcaption a {
   color: white;
 }
-/* line 206, ../scss/application.scss */
-.image-gallery figcaption:hover {
+/* line 224, ../scss/application.scss */
+.image-gallery figcaption:hover, .image-gallery figcaption:active {
   background: #2da4cc;
 }
-/* line 207, ../scss/application.scss */
-.image-gallery figcaption span {
-  font-size: 14px;
-  color: rgba(255, 255, 255, 0.6);
+@media screen and (max-width: 700px) {
+  /* line 213, ../scss/application.scss */
+  .image-gallery figcaption {
+    font-size: 14px;
+    right: 5%;
+  }
 }
 
-/* line 211, ../scss/application.scss */
+/* line 232, ../scss/application.scss */
 .page {
   padding: 0;
   margin: 0 auto;
 }
-/* line 214, ../scss/application.scss */
+/* line 235, ../scss/application.scss */
 .page iframe {
   border: none;
   height: 600px;
 }
 @media screen and (max-width: 700px) {
-  /* line 214, ../scss/application.scss */
+  /* line 235, ../scss/application.scss */
   .page iframe {
     height: 640px;
   }
 }
 
-/* line 223, ../scss/application.scss */
+/* line 244, ../scss/application.scss */
 .buy-tickets {
   max-width: 640px;
   margin: 0 auto 48px;
   padding: 36px 20px 24px;
   position: relative;
 }
-/* line 229, ../scss/application.scss */
+/* line 250, ../scss/application.scss */
 .buy-tickets:before {
   position: absolute;
   content: "";
@@ -1418,7 +1422,7 @@ p.large + p {
   margin-left: -30px;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3 / 2), (min-device-pixel-ratio: 2) {
-  /* line 229, ../scss/application.scss */
+  /* line 250, ../scss/application.scss */
   .buy-tickets:before {
     background-position: 0 0;
     -webkit-background-size: 444px auto;
@@ -1429,16 +1433,16 @@ p.large + p {
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 223, ../scss/application.scss */
+  /* line 244, ../scss/application.scss */
   .buy-tickets {
     padding-top: 0;
   }
-  /* line 240, ../scss/application.scss */
+  /* line 261, ../scss/application.scss */
   .buy-tickets:before {
     background: none;
   }
 }
-/* line 244, ../scss/application.scss */
+/* line 265, ../scss/application.scss */
 .buy-tickets iframe {
   max-width: 640px;
   margin: 12px auto 24px;
@@ -1452,7 +1456,7 @@ p.large + p {
   border-radius: 4px;
 }
 
-/* line 251, ../scss/application.scss */
+/* line 272, ../scss/application.scss */
 #event {
   margin-bottom: 3em !important;
 }
