--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1186,18 +1186,18 @@ header h2 {
   color: rgba(0, 0, 0, 0.6);
   font-weight: 500;
 }
-/* line 80, ../scss/application.scss */
+/* line 78, ../scss/application.scss */
 header h2 .div {
   display: inline-block;
   margin: 0 10px;
 }
 @media screen and (max-width: 700px) {
-  /* line 80, ../scss/application.scss */
+  /* line 78, ../scss/application.scss */
   header h2 .div {
     display: none;
   }
 }
-/* line 87, ../scss/application.scss */
+/* line 85, ../scss/application.scss */
 header h2 a {
   /*&:before {
     content: "\2022";
@@ -1206,29 +1206,29 @@ header h2 a {
   }*/
 }
 @media screen and (max-width: 700px) {
-  /* line 87, ../scss/application.scss */
+  /* line 85, ../scss/application.scss */
   header h2 a {
     display: block;
   }
-  /* line 97, ../scss/application.scss */
+  /* line 95, ../scss/application.scss */
   header h2 a:before, header h2 a:after {
     display: none;
   }
 }
-/* line 104, ../scss/application.scss */
+/* line 102, ../scss/application.scss */
 header h3.twitter a {
   text-decoration: none;
   font-weight: 500;
 }
 
-/* line 113, ../scss/application.scss */
+/* line 111, ../scss/application.scss */
 .home p {
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
 }
 
-/* line 118, ../scss/application.scss */
+/* line 116, ../scss/application.scss */
 p.large {
   color: rgba(0, 0, 0, 0.6);
   max-width: 640px;
@@ -1239,13 +1239,13 @@ p.large {
   text-align: center;
 }
 @media screen and (max-width: 700px) {
-  /* line 118, ../scss/application.scss */
+  /* line 116, ../scss/application.scss */
   p.large {
     font-size: 18px;
     font-weight: 400;
   }
 }
-/* line 128, ../scss/application.scss */
+/* line 126, ../scss/application.scss */
 p.large + p {
   text-align: center;
   max-width: 552px;
@@ -1253,9 +1253,9 @@ p.large + p {
   padding-bottom: .8em;
 }
 
-/* line 136, ../scss/application.scss */
+/* line 134, ../scss/application.scss */
 .button {
-  display: inline-block;
+  display: block;
   font-weight: 300;
   font-size: 26px;
   line-height: 32px;
@@ -1271,6 +1271,9 @@ p.large + p {
   text-decoration: none;
   text-align: center;
   margin-bottom: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 252px;
 }
 /* line 150, ../scss/application.scss */
 .button:hover {
@@ -1292,24 +1295,22 @@ p.large + p {
   background: transparent;
 }
 @media screen and (max-width: 700px) {
-  /* line 136, ../scss/application.scss */
+  /* line 134, ../scss/application.scss */
   .button {
     font-size: 18px;
     font-weight: 400;
     display: block;
     margin-bottom: 12px;
-    margin-left: auto;
-    margin-right: auto;
     max-width: 260px;
     margin-top: 2%;
   }
-  /* line 171, ../scss/application.scss */
+  /* line 169, ../scss/application.scss */
   .button.sponsor {
     font-size: 18px;
   }
 }
 
-/* line 175, ../scss/application.scss */
+/* line 173, ../scss/application.scss */
 .image-gallery {
   overflow: hidden;
   position: relative;
@@ -1318,13 +1319,13 @@ p.large + p {
   padding-top: 45%;
 }
 @media screen and (max-width: 700px) {
-  /* line 175, ../scss/application.scss */
+  /* line 173, ../scss/application.scss */
   .image-gallery {
     margin-top: 1.5em;
     padding-top: 60%;
   }
 }
-/* line 187, ../scss/application.scss */
+/* line 185, ../scss/application.scss */
 .image-gallery:before {
   content: "";
   display: block;
@@ -1337,7 +1338,7 @@ p.large + p {
   background: transparent url("../images/sand-shadow.png") no-repeat top center;
   background-size: 100% auto;
 }
-/* line 200, ../scss/application.scss */
+/* line 198, ../scss/application.scss */
 .image-gallery figure {
   display: block;
   position: absolute;
@@ -1346,14 +1347,14 @@ p.large + p {
   bottom: 0;
   left: 0;
 }
-/* line 206, ../scss/application.scss */
+/* line 204, ../scss/application.scss */
 .image-gallery img {
   display: block;
   position: absolute;
   top: 0;
   width: 100%;
 }
-/* line 213, ../scss/application.scss */
+/* line 211, ../scss/application.scss */
 .image-gallery figcaption {
   display: block;
   position: absolute;
@@ -1367,47 +1368,47 @@ p.large + p {
   -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
-/* line 223, ../scss/application.scss */
+/* line 221, ../scss/application.scss */
 .image-gallery figcaption a {
   color: white;
 }
-/* line 224, ../scss/application.scss */
+/* line 222, ../scss/application.scss */
 .image-gallery figcaption:hover, .image-gallery figcaption:active {
   background: #2da4cc;
 }
 @media screen and (max-width: 700px) {
-  /* line 213, ../scss/application.scss */
+  /* line 211, ../scss/application.scss */
   .image-gallery figcaption {
     font-size: 14px;
     right: 5%;
   }
 }
 
-/* line 232, ../scss/application.scss */
+/* line 230, ../scss/application.scss */
 .page {
   padding: 0;
   margin: 0 auto;
 }
-/* line 235, ../scss/application.scss */
+/* line 233, ../scss/application.scss */
 .page iframe {
   border: none;
   height: 600px;
 }
 @media screen and (max-width: 700px) {
-  /* line 235, ../scss/application.scss */
+  /* line 233, ../scss/application.scss */
   .page iframe {
     height: 640px;
   }
 }
 
-/* line 244, ../scss/application.scss */
+/* line 242, ../scss/application.scss */
 .buy-tickets {
   max-width: 640px;
   margin: 0 auto 48px;
   padding: 36px 20px 24px;
   position: relative;
 }
-/* line 250, ../scss/application.scss */
+/* line 248, ../scss/application.scss */
 .buy-tickets:before {
   position: absolute;
   content: "";
@@ -1422,7 +1423,7 @@ p.large + p {
   margin-left: -30px;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3 / 2), (min-device-pixel-ratio: 2) {
-  /* line 250, ../scss/application.scss */
+  /* line 248, ../scss/application.scss */
   .buy-tickets:before {
     background-position: 0 0;
     -webkit-background-size: 444px auto;
@@ -1433,16 +1434,16 @@ p.large + p {
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 244, ../scss/application.scss */
+  /* line 242, ../scss/application.scss */
   .buy-tickets {
     padding-top: 0;
   }
-  /* line 261, ../scss/application.scss */
+  /* line 259, ../scss/application.scss */
   .buy-tickets:before {
     background: none;
   }
 }
-/* line 265, ../scss/application.scss */
+/* line 263, ../scss/application.scss */
 .buy-tickets iframe {
   max-width: 640px;
   margin: 12px auto 24px;
@@ -1456,7 +1457,7 @@ p.large + p {
   border-radius: 4px;
 }
 
-/* line 272, ../scss/application.scss */
+/* line 270, ../scss/application.scss */
 #event {
   margin-bottom: 3em !important;
 }
