--- a/2014/scss/application.scss
+++ b/2014/scss/application.scss
@@ -83,6 +83,7 @@ header{
 		}		
 	}
     a {
+    	text-decoration: none;
     //  color: #555;
       /*&:before {
         content: "\2022";
@@ -101,7 +102,6 @@ header{
   h3.twitter{    
     a{
       //font-size: 1.14285em;
-      text-decoration: none;
       font-weight: 500;
 
       &:hover{ }
@@ -218,7 +218,7 @@ p.large{
 	font-size: 18px;
 	line-height: 24px;
   	@include box-shadow(0 0 6px rgba(black, 0.6));
-  	a { color: white; }
+  	a { color: white; text-decoration: none;}
     &:hover, &:active { background: $blue;}
   	@media screen and (max-width: 700px) {
 	  	font-size: 14px;
